--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>All Listings</h3>
         <ul>
             <% for(let listing of allListings) { %>
-                <li><a href="/listings/<%= listing._id %>"> <%= listing.title %> </a></li>
+                <li><a href="listings/<%= listing._id %>"> <%= listing.title %> </a></li>
             <% } %>
         </ul>
-    </h1>
 </body>
 </html>
